# Free-Imperium

./: .gitignore  LICENSE  README  README.md  TODO
client/: CMakeLists.txt  Makefile  ProvDataTest.txt  ProvPointsData.txt  SeaBordersData.txt  TODO
client/generated_data/: BordersData.txt  ProvPointsData.txt  SeaBordersData.txt
client/src/: #main.cpp#  #settings.h#  .#settings.h  asset_manager.cpp  asset_manager.h  battle.cpp  battle.h  border_batch.cpp  border_batch.h  camera.cpp  camera.h  click_event_enum.h  color.h  country.cpp  country.h  country_loader.cpp  country_loader.h  ctr_data.h  font_batch.cpp  font_batch.h  game.cpp  game.h  game_data.cpp  game_data.h  gui_aid.cpp  gui_aid.h  gui_last.cpp  gui_last.h  gui_structs.h  int_to_string.h  load_data.cpp  load_data.h  load_values_from_txt.cpp  load_values_from_txt.h  main.cpp  map.cpp  map.h  map2.cpp  map2.h  map_batch.cpp  (+51 more)
server/: CMakeLists.txt
server/src/: Makefile  battle.cpp  battle.h  client.h  color.cpp  color.h  country.cpp  country.h  country_loader.h  date.h  do_the_thing.cpp  do_the_thing.h  do_the_thing_notify_of_declined_peace.cpp  game.cpp  game.h  load_values_from_txt.h  main.cpp  map.h  packet.h  path_finder.cpp  path_finder.h  peace_offer.cpp  peace_offer.h  process_packet.cpp  process_packet.h  process_packet_acceptedPeace.cpp  process_packet_declare_war.cpp  process_packet_decline_peace.cpp  process_packet_merge_units.cpp  process_packet_new_unit.cpp  process_packet_peace_offer.cpp  process_packet_start_impr_rel.cpp  process_packet_unit_move.cpp  province.cpp  province.h  province_loader.cpp  province_loader.h  siege.cpp  siege.h  truce.h  (+4 more)
shared/: log.h  (+7 more)
(+169 files in other folders)
